# Ananke

./: .gitignore  README.md  architecture.py  baseline.py  benchmark_weights.py  compare_samples.py  experiment_experts.py  export_hf.py  generate.py  pyproject.toml
experiments/: ATTENTION_AND_SUB8_REPORT.md  direct_weights.json  sample_comparison.json  sample_comparison.md
experiments/expert_sweep/: comparison.md  experts_1.json  experts_2.json  experts_4.json
experiments/v10_experts24/: README.md  build.py  build_report.json  calibrate.py  calibration.json  convert.py  quantize.py  report.json
experiments/v11_experts23/: README.md  build.py  build_report.json  convert.py  quantize.py  report.json  vram_test.log.err  vram_test_ngl14.log.err
experiments/v12_top1/: README.md  report.json  test.py
experiments/v13_parallel4/: README.md  report.json  test.py
experiments/v14_parallel8/: README.md  report.json  test.py
experiments/v15_parallel10/: README.md  report.json  test.py
experiments/v16_parallel8_long/: README.md  report.json  test.py
experiments/v17_mtp/: README.md  report.json
experiments/v18_top1_recovery/: README.md  probe.py  report.json
experiments/v19_small8l/: README.md  report.json  test.py
experiments/v1_vocab64k/: README.md  build.py  build_report.json  convert.py  test.py  test_report.json  test_report.md
experiments/v20_context262k/: README.md  build.py  build_report.json  convert.py  test_report.json
experiments/v2_vocab16k/: README.md  build.py  convert.py  test.py  test_report.json  test_report.md
(+50 files in other folders)
